[package]
name = "advent-code-cli"
version = "0.1.0"
edition = "2021"
author = "g00z_g00z"
about = "A CLI for generating files for the advent of code challenge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
serde = "1.0.164"
serde_yaml = "0.9.21"
tempdir = "0.3.7"
tera = "1.19.0"
